2000-11-16  Jeff Freedman  <jeff@amy.nerble.net>

	* Finished work on removing class Vector that Max started.

2000-11-13  Tristan Tarrant <nadir@users.sourceforge.net>

	* bggame.cc: Load endgame fonts using Font class
	* sigame.cc: Likewise for intro
	* font.cc: Handle fonts coming from IFF files
	* gametxt.cc, gamewin.h: get rid of setup_endgame_fonts()
	* fnames.h: Get rid of some _FONT definitions
	* TODO: updated a bit

2000-11-13  Tristan Tarrant <nadir@users.sourceforge.net>

	* configure.in: make version 0.90alpha1
	* browser.cc: use new Font class

2000-11-12  Jeff Freedman  <jeff@amy.nerble.net>

	* egg.cc (Egg_object): Must be on or above egg.
	(Egg_object): Commented out code which I think is wrong.

	* Fixed crash in Vesper (Gargoyle inn).

2000-11-10  Jeff Freedman  <jeff@amy.nerble.net>

	* Decayable/nondecayable bodies.

2000-11-09  Tristan Tarrant <nadir@users.sourceforge.net>

	* exult.cc: try harder to find 'exult.flx'.

2000-11-08  Jeff Freedman  <jeff@amy.nerble.net>

	* actors.cc: Trying to fix weapon clipping.

2000-11-08  Tristan Tarrant <nadir@users.sourceforge.net>

	* configure.in, tools/Makefile.am: only build the GIMP plugin if we
	  have GIMP > 1.1.26

2000-11-07  Tristan Tarrant <nadir@users.sourceforge.net>

	* configure.in: try harder to find ligimp/gimp.h
	* */Makefile.am: make libraries non-installable
	* tools/Makefile.am: don't try to install GIMP plugin if we haven't
	  built it
	* data/Makefile.am: install midisfx.flx
	* exult.spec.in: It now works (no devel package yet)

2000-11-07  Tristan Tarrant <nadir@users.sourceforge.net>

	* cheat.cc, cheat.h: implement set_enabled() which saves into config
	* exult.cc: the all-important about scroll (ctrl-v), resolution
	  things
	* game.cc: beginnings of setup menu
	* data/*.shp: some new shapes for the menu

2000-11-06  Tristan Tarrant <nadir@users.sourceforge.net>
	
	* font.cc, font.h: beginnings of independent font class and font 
	  manager